Update to public api
`sun.misc.BASE64Decoder` & `sun.misc.BASE64Encoder` are internal
soon too be deprecated internal Java APIs, warnings are now generated
when using them.

This pull request switches to the standard Java public base64 API